// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/waitSpots DELETE /:waitSpotId delete a waitSpot 1`] = `Object {}`;

exports[`/api/waitSpots GET / retrieve a waitSpot 1`] = `
Object {
  "entities": Object {
    "waitSpots": Object {
      "cc43f0d7-9fb0-4946-b889-f284ea48e4d0": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-27T00:14:30.932Z",
        "endDate": "2017-07-27T00:14:30.932Z",
        "id": "cc43f0d7-9fb0-4946-b889-f284ea48e4d0",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "preferences": Object {
          "afternoons": true,
          "evenings": true,
          "mornings": true,
          "weekdays": true,
          "weekends": true,
        },
      },
    },
  },
  "result": Array [
    "cc43f0d7-9fb0-4946-b889-f284ea48e4d0",
  ],
}
`;

exports[`/api/waitSpots POST / create a waitSpot 1`] = `
Object {
  "entities": Object {
    "waitSpots": Object {
      "6303daf4-377e-4b70-843b-08671e6183d7": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-29T00:14:30.932Z",
        "id": "6303daf4-377e-4b70-843b-08671e6183d7",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "preferences": Object {
          "afternoons": true,
          "evenings": true,
          "mornings": true,
          "weekdays": true,
          "weekends": true,
        },
      },
    },
  },
  "result": "6303daf4-377e-4b70-843b-08671e6183d7",
}
`;

exports[`/api/waitSpots PUT /:waitSpotId retrieve a waitSpot with a patient or patientUser 1`] = `
Object {
  "entities": Object {
    "patientUsers": Object {
      "b8665c97-1e98-41ac-bf13-090b742de400": Object {
        "createdAt": "2017-07-24T18:10:36.408Z",
        "email": "testPatientUser@test.com",
        "firstName": "Jack",
        "id": "b8665c97-1e98-41ac-bf13-090b742de400",
        "isEmailConfirmed": false,
        "isPhoneNumberConfirmed": false,
        "lastName": "Daniels",
        "password": "$2a$10$BUko9.4nEekpMdBa13Xkbutvs.QQ5Qx9g5kJiQ27lQCvAun/Mg.Dy",
        "phoneNumber": "+16049999999",
      },
    },
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentPreference": "both",
        "createdAt": "2017-07-24T18:10:36.422Z",
        "email": "testPatient@test.com",
        "firstName": "Ronald",
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "lastName": "Mcdonald",
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
      },
    },
    "waitSpots": Object {
      "cc43f0d7-9fb0-4946-b889-f284ea48e4d0": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-27T00:14:30.932Z",
        "endDate": "2017-07-27T00:14:30.932Z",
        "id": "cc43f0d7-9fb0-4946-b889-f284ea48e4d0",
        "patient": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientUser": "b8665c97-1e98-41ac-bf13-090b742de400",
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "preferences": Object {
          "afternoons": true,
          "evenings": true,
          "mornings": true,
          "weekdays": true,
          "weekends": true,
        },
      },
    },
  },
  "result": Array [
    "cc43f0d7-9fb0-4946-b889-f284ea48e4d0",
  ],
}
`;

exports[`/api/waitSpots PUT /:waitSpotId update a waitSpot 1`] = `
Object {
  "entities": Object {
    "waitSpots": Object {
      "cc43f0d7-9fb0-4946-b889-f284ea48e4d0": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-29T00:15:30.932Z",
        "endDate": "2017-07-27T00:14:30.932Z",
        "id": "cc43f0d7-9fb0-4946-b889-f284ea48e4d0",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "preferences": Object {
          "afternoons": true,
          "evenings": true,
          "mornings": true,
          "weekdays": true,
          "weekends": true,
        },
      },
    },
  },
  "result": "cc43f0d7-9fb0-4946-b889-f284ea48e4d0",
}
`;
